--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "talele427.github.io",
   "version": "1.0.0",
-  "description": "miner",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
